@@ -46,8 +46,5 @@ if test $withval = no; then
 	DEPKRB4_CRYPTO_LIB='$(TOPLIBD)/libdes425.a'
 fi
 dnl
-USE_KRB4_LIBRARY
-USE_ANAME
-KRB5_LIBRARIES
-V5_USE_SHARED_LIB
+KRB5_BUILD_PROGRAM
 V5_AC_OUTPUT_MAKEFILE
